Adicionando referencial teórico e removendo coisas

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,64 +1,388 @@
-@book{Goodfellow2016,
-author = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
-publisher = {MIT Press},
-title = {{Deep Learning}},
-year = {2016}
+@article{Rager1998,
+abstract = {We examined the possibility that neurons or groups of neurons along the retino-cortical transmission chain have properties of tuned oscillators: To this end, we studied the resonance properties of the retino-thalamo-cortical system of anaesthetized cats by entraining responses with flicker stimuli of variable frequency (2-50 Hz). Responses were assessed from multi-unit activity (MUA) and local field potentials (LFPs) with up to four spatially segregated electrodes placed in areas 17 and 18. MUA and LFP responses were closely related, units discharging with high preference during LFP negativity. About 300 ms after flicker onset, responses stabilized and exhibited a highly regular oscillatory patterning that was surprisingly similar at different recording sites due to precise stimulus locking. Fourier transforms of these steady state oscillations showed maximal power at the inducing frequency and consistently revealed additional peaks at harmonic frequencies. The frequency-dependent amplitude changes of the fundamental and harmonic response components suggest that the retino-cortical system is entrainable into steady state oscillations over a broad frequency range and exhibits preferences for distinct frequencies in the theta- or slow alpha-range, and in the beta- and gamma-band. Concomitant activation of the mesencephalic reticular formation increased the ability of cortical cells to follow high frequency stimulation, and enhanced dramatically the amplitude of first- and second-order harmonics in the gamma-frequency range between 30 and 50 Hz. Cross-correlations computed between responses recorded simultaneously from different sites revealed pronounced synchronicity due to precise stimulus locking. These results suggest that the retino-cortical system contains broadly tuned, strongly damped oscillators which altogether exhibit at least three ranges of preferred frequencies, the relative expression of the preferences depending on the central state. These properties agree with the characteristics of oscillatory responses evoked by non-temporally modulated stimuli, and they indicate that neuronal responses along the retino-cortical transmission chain can become synchronized with precision in the millisecond range not only by intrinsic interactions, but also by temporally structured stimuli.},
+author = {Rager, G.},
+doi = {10.1046/j.1460-9568.1998.00197.x},
+file = {:home/guilhermesf/documents/Mendeley Desktop//Rager - 1998 - The response of cat visual cortex to flicker stimuli of variable frequency.pdf:pdf},
+issn = {0953816X},
+journal = {European Journal of Neuroscience},
+keywords = {Flicker,Frequency response,Oscillations,Visual cortex},
+number = {5},
+pages = {1856--1877},
+title = {{The response of cat visual cortex to flicker stimuli of variable frequency}},
+volume = {10},
+year = {1998}
 }
 
-@inproceedings{Ciresan2012,
-author = {Dan Ciresan and Ueli Meier and Jürgen Schmidhuber},
-title = {Multi-column deep neural networks for image classification},
-booktitle = {IN PROCEEDINGS OF THE 25TH IEEE CONFERENCE ON COMPUTER VISION AND PATTERN RECOGNITION (CVPR 2012)},
-year = {2012},
-pages = {3642--3649},
+@article{Regan1986,
+abstract = {none},
+author = {Regan, D. and Spekreijse, H.},
+doi = {10.1016/0042-6989(86)90168-9},
+issn = {00426989},
+journal = {Vision Research},
+number = {9},
+pages = {1461--1480},
+title = {{Evoked potentials in vision research 1961-1986}},
+volume = {26},
+year = {1986}
+}
+
+@article{hanHighlyInteractiveBrain2018,
+  title = {Highly {{Interactive Brain}}\textendash{{Computer Interface Based}} on {{Flicker}}-{{Free Steady}}-{{State Motion Visual Evoked Potential}}},
+  author = {Han, Chengcheng and Xu, Guanghua and Xie, Jun and Chen, Chaoyang and Zhang, Sicong},
+  year = {2018},
+  month = dec,
+  volume = {8},
+  pages = {5835},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-018-24008-8},
+  journal = {Scientific Reports},
+  language = {en},
+  number = {1}
+}
+
+@article{Regan1982,
+author = {Regan, D},
+doi = {10.1111/j.1749-6632.1982.tb50784.x},
+journal = {Annals of the New York Academy of Sciences},
+number = {1},
+pages = {45--71},
+title = {{Comparison of Transient and Steady-State Methods}},
+url = {https://nyaspubs.onlinelibrary.wiley.com/doi/abs/10.1111/j.1749-6632.1982.tb50784.x},
+volume = {388},
+year = {1982}
+}
+
+@article{John2000,
+author = {John, M. S. and Picton, T. W.},
+doi = {10.1016/S0378-5955(99)00209-9},
+issn = {03785955},
+journal = {Hearing Research},
+keywords = {Apparent latency,Auditory evoked potential,Phase,Steady-state response,Travelling wave},
+number = {1-2},
+pages = {57--79},
+pmid = {10713496},
+title = {{Human auditory steady-state responses to amplitude-modulated tones: Phase and latency measurements}},
+volume = {141},
+year = {2000}
+}
+
+@article{Regan1966,
+author = {Regan, D.},
+doi = {10.1016/0013-4694(66)90088-5},
+issn = {00134694},
+journal = {Electroencephalography and Clinical Neurophysiology},
+number = {3},
+pages = {238--248},
+pmid = {4160391},
+title = {{Some characteristics of average steady-state and transient responses evoked by modulated light}},
+volume = {20},
+year = {1966}
+}
+
+@article{odom2004,
+  title = {Visual Evoked Potentials Standard (2004)},
+  author = {Odom, J Vernon and Bach, Michael and Barber, Colin and Brigell, Mitchell and Marmor, Michael F and Tormene, Alma Patrizia and Holder, Graham E},
+  pages = {9},
+  doi = {10/cq7jds},
+  language = {en},
+  year = {2004}
+}
+
+@article{Vialatte2010,
+author = {Vialatte, Fraņois Ben{\^{o}}t and Maurice, Monique and Dauwels, Justin and Cichocki, Andrzej},
+doi = {10.1016/j.pneurobio.2009.11.005},
+issn = {03010082},
+journal = {Progress in Neurobiology},
+keywords = {BCI,Clinical,Cognitive,EEG,Evoked potentials,FMRI,PET,SSVEP},
+mendeley-groups = {Zotero - Pesquisa,Zotero - Zotero Library},
+number = {4},
+pages = {418--438},
+title = {{Steady-state visually evoked potentials: Focus on essential paradigms and future perspectives}},
+volume = {90},
+year = {2010}
 }
 
 
-@manual{NBR6023:2000,
-address={Rio de Janeiro},
-month={ago.},
-organization={Associa{\c{c}}{\~a}o Brasileira de Normas T{\'e}cnicas},
-org-short={ABNT},
-pages={22},
-subtitle={Informa{\c{c}}{\~a}o e documenta{\c{c}}{\~a}o --- Refer{\^e}ncias ---Elabora{\c{c}}{\~a}o},
-title={{NBR} 6023},
-year={2000}
+@inproceedings{Kluge2007,
+  title = {Phase {{Coherent Detection}} of {{Steady}}-{{State Evoked Potentials}}: {{Experimental Results}} and {{Application}} to {{Brain}}-{{Computer Interfaces}}},
+  shorttitle = {Phase {{Coherent Detection}} of {{Steady}}-{{State Evoked Potentials}}},
+  booktitle = {2007 3rd {{International IEEE}}/{{EMBS Conference}} on {{Neural Engineering}}},
+  author = {Kluge, Tilmann and Hartmann, Manfred},
+  year = {2007},
+  month = may,
+  pages = {425--429},
+  publisher = {{IEEE}},
+  address = {{Kohala Coast, HI, USA}},
+  doi = {10.1109/CNE.2007.369700},
+  isbn = {978-1-4244-0791-0 978-1-4244-0792-7},
+  language = {en}
 }
 
-@article{SMIRNOV201489,
-title = "Comparison of Regularization Methods for ImageNet Classification with Deep Convolutional Neural Networks",
-journal = "AASRI Procedia",
-volume = "6",
-pages = "89 - 94",
-year = "2014",
-note = "2nd AASRI Conference on Computational Intelligence and Bioinformatics",
-issn = "2212-6716",
-doi = "https://doi.org/10.1016/j.aasri.2014.05.013",
-url = "http://www.sciencedirect.com/science/article/pii/S2212671614000146",
-author = "Evgeny A. Smirnov and Denis M. Timoshenko and Serge N. Andrianov",
-keywords = "Deep Neural Networks, Convolutional Neural Networks, Dropout, DropConnect, ImageNet",
-abstract = "Large and Deep Convolutional Neural Networks achieve good results in image classification tasks, but they need methods to prevent overfitting. In this paper we compare performance of different regularization techniques on ImageNet Large Scale Visual Recognition Challenge 2013. We show empirically that Dropout works better than DropConnect on ImageNet dataset.",
-urldate = "01/07/2019",
-urlaccessdate = "01 jul. 2019"
+@article{Liang2020,
+  title = {Optimizing a Dual-Frequency and Phase Modulation Method for {{SSVEP}}-Based {{BCIs}}},
+  author = {Liang, Liyan and Lin, Jiajun and Yang, Chen and Wang, Yijun and Chen, Xiaogang and Gao, Shangkai and Gao, Xiaorong},
+  year = {2020},
+  month = aug,
+  volume = {17},
+  pages = {046026},
+  issn = {1741-2552},
+  doi = {10.1088/1741-2552/abaa9b},
+  journal = {Journal of Neural Engineering},
+  language = {en},
+  number = {4}
 }
 
-@Patent{EHLINGER:2006:biblatex,
-author = {EHLINGER, JR., Philip Charles},
-title = {Device for the treatment of hiccups},
+@article{Wang2006,
+author = {Wang, Yijun and Wang, Ruiping and Gao, Xiaorong and Hong, Bo and Gao, Shangkai},
+doi = {10.1109/TNSRE.2006.875576},
+issn = {15344320},
+journal = {IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+keywords = {Brain-computer interface (BCI),Information transfer rate (ITR),Steady-state visual evoked potential (SSVEP)},
+number = {2},
+pages = {234--239},
+title = {{A practical VEP-based brain-computer interface}},
+volume = {14},
+year = {2006}
+}
+
+@article{Herrmann2001,
+author = {Herrmann, C. S.},
+doi = {10.1007/s002210100682},
+issn = {00144819},
+journal = {Experimental Brain Research},
+keywords = {Alpha,EEG,Flicker,Gamma,Resonance,SSVEP,Steady-state potentials},
+number = {3-4},
+pages = {346--353},
+title = {{Human EEG responses to 1-100 Hz flicker: Resonance phenomena in visual cortex and their potential correlation to cognitive phenomena}},
+volume = {137},
+year = {2001}
+}
+
+@article{Pastor2003,
+author = {Pastor, Maria A and Artieda, Julio and Arbizu, Javier and Valencia, Miguel and Masdeu, Jose C},
+keywords = {cerebellum,gamma oscillatory activity,phy,positron emission tomogra-,regional cerebral blood flow,steady-state visual-evoked potentials,visual cortex},
+number = {37},
+pages = {11621--11627},
+title = {{Human Cerebral Activation during Steady-State Visual-Evoked Responses}},
+volume = {23},
+year = {2003}
+}
+
+@article{RamosJunior2011,
+author = {Ramos-J{\'{u}}nior, S{\'{e}}rgio G. and Celino, Daniel R. and Rodor, F{\'{a}}uzi F. and Ribeiro, Mois{\'{e}}s R.N. and M{\"{u}}ller, Sandra M.T. and Filho, Teodiano Freire Bastos and Filho, Mario Sarcinelli},
+doi = {10.1109/BRC.2011.5740685},
+isbn = {9781424482122},
+journal = {2011 ISSNIP Biosignals and Biorobotics Conference: Biosignals and Robotics for Better and Safer Living, BRC 2011},
+keywords = {BCI,Flicker Fusion Frequency (FFF),SSVEP},
+pages = {86--90},
+title = {{Experimental evidences for visual evoked potentials with stimuli beyond the conscious perception threshold}},
+year = {2011}
+}
+
+@article{Regan1978,
+author = {Regan, D.},
+doi = {10.1016/0042-6989(78)90054-8},
+issn = {00426989},
+journal = {Vision Research},
+keywords = {pattern vision,visual acuity,visual deprivation,visual development,visual evoked potentials},
+number = {4},
+pages = {439--443},
+title = {{Assessment of visual acuity by evoked potential recording: Ambiguity caused by temporal dependence of spatial frequency selectivity}},
+volume = {18},
+year = {1978}
+}
+
+@article{GodinezTello2015,
+author = {Godinez, Tello and Richard Junior Manuel and M{\"{u}}ller, Sandra Mara Torres and Ferreira, Andr{\'{e}} and Bastos, Teodiano Freire},
+doi = {10.1590/2446-4740.0739},
+issn = {19847742},
+journal = {Revista Brasileira de Engenharia Biomedica},
+keywords = {Brain Computer Interface,Color,EEG,LED,SSVEP},
+number = {3},
+pages = {218--231},
+title = {{Comparison of the influence of stimuli color on steady-state visual evoked potentials}},
+volume = {31},
+year = {2015}
+}
+
+@article{Chang2014,
+  title = {An Amplitude-Modulated Visual Stimulation for Reducing Eye Fatigue in {{SSVEP}}-Based Brain\textendash Computer Interfaces},
+  author = {Chang, Min Hye and Baek, Hyun Jae and Lee, Seung Min and Park, Kwang Suk},
+  year = {2014},
+  month = jul,
+  volume = {125},
+  pages = {1380--1391},
+  issn = {13882457},
+  doi = {10/f54s72},
+  journal = {Clinical Neurophysiology},
+  language = {en},
+  number = {7}
+}
+
+@article{Zhang2019,
+  title = {The Effect of Visual Stimuli Noise and Fatigue on Steady-State Visual Evoked Potentials},
+  author = {Zhang, Shangen and Gao, Xiaorong},
+  year = {2019},
+  month = sep,
+  volume = {16},
+  pages = {056023},
+  issn = {1741-2552},
+  doi = {10/gf2nvs},
+  journal = {Journal of Neural Engineering},
+  language = {en},
+  number = {5}
+}
+
+@article{Parra2007,
+author = {Parra, Jaime and {Lopes Da Silva}, Fernando H. and Stroink, Hans and Kalitzin, Stiliyan},
+doi = {10.1093/brain/awm103},
+issn = {00068950},
+journal = {Brain},
+keywords = {Chromatosensitive epilepsy,Photoparoxysmal response,Photosensitive epilepsy,Seizure prevention,Tinted lenses},
+number = {6},
+pages = {1679--1689},
+title = {{Is colour modulation an independent factor in human visual photosensitivity?}},
+volume = {130},
+year = {2007}
+}
+
+@article{Muller2005a,
+  ids = {muller-putzSteadystateVisualEvoked2005},
+  title = {Steady-State Visual Evoked Potential ({{SSVEP}})-Based Communication: Impact of Harmonic Frequency Components},
+  shorttitle = {Steady-State Visual Evoked Potential ({{SSVEP}})-Based Communication},
+  author = {{M{\"u}ller-Putz}, Gernot R and Scherer, Reinhold and Brauneis, Christian and Pfurtscheller, Gert},
+  year = {2005},
+  month = dec,
+  volume = {2},
+  pages = {123--130},
+  issn = {1741-2560, 1741-2552},
+  doi = {10/djdmk6},
+  journal = {Journal of Neural Engineering},
+  language = {en},
+  number = {4}
+}
+
+@article{Muller2006,
+title = {Feature-selective attention enhances color signals in early visual areas of the human brain},
+author = {M{\"u}ller, M. M. and Andersen, S. and Trujillo, N. J. and Valdes - Sosa, P. and Malinowski, P. and Hillyard, S. A.},
+journal = {Proceedings of the National Academy of Sciences of the United States},
 year = {2006},
-month = {06},
-day = {13},
-number = {US 7062320},
-type = {Patent},
-version = {},
-location = {US},
-url = {http://www.patentlens.net/patentlens/...},
-filing_num = {10684114},
-yearfiled = {2003},
-monthfiled = {10},
-dayfiled = {14},
-pat_refs = {US 408607 A (Aug, 1889) Flint 607/134; US 4210141 A (Jul, 1980) Brockman et al. 604/78},
-IPC_class = {A61N 1/04},
-US_class = {607 2},
-abstract = {A device for the treatment of hiccups, and more specifically, to a method and apparatus for the treatment of hiccups involving galvanic stimulation of the Superficial Phrenetic and Vagus nerves using an electric current.}
-} 
+volume = {103(38)},
+pages = {14250(5)},
+doi = {10.1073/pnas.0606668103}
+}
+
+
+@article{Heim2019,
+  title = {Quantifying {{Intermodal Distraction}} by {{Emotion During Math Performance}}: {{An Electrophysiological Approach}}},
+  shorttitle = {Quantifying {{Intermodal Distraction}} by {{Emotion During Math Performance}}},
+  author = {Heim, Sabine and Keil, Andreas},
+  year = {2019},
+  month = mar,
+  volume = {10},
+  pages = {439},
+  issn = {1664-1078},
+  doi = {10.3389/fpsyg.2019.00439},
+  journal = {Frontiers in Psychology},
+  language = {en}
+}
+
+
+@article{Belmonte2000,
+  title = {Abnormal {{Attention}} in {{Autism Shown}} by {{Steady}}-{{State Visual Evoked Potentials}}},
+  author = {Belmonte, Matthew},
+  year = {2000},
+  month = sep,
+  volume = {4},
+  pages = {269--285},
+  issn = {1362-3613, 1461-7005},
+  doi = {10/b2422h},
+  journal = {Autism},
+  language = {en},
+  number = {3}
+}
+
+@article{Sakurada2015,
+  title = {Use of High-Frequency Visual Stimuli above the Critical Flicker Frequency in a {{SSVEP}}-Based {{BMI}}},
+  author = {Sakurada, Takeshi and Kawase, Toshihiro and Komatsu, Tomoaki and Kansaku, Kenji},
+  year = {2015},
+  month = oct,
+  volume = {126},
+  pages = {1972--1978},
+  issn = {1388-2457},
+  doi = {10/f7r8vv},
+  journal = {Clinical Neurophysiology},
+  keywords = {BCI,BMI,Critical flicker frequency,SSVEP,Visual fatigue},
+  language = {en},
+  number = {10}
+}
+
+
+@article{Cao2014,
+  title = {Objective Evaluation of Fatigue by {{EEG}} Spectral Analysis in Steady-State Visual Evoked Potential-Based Brain-Computer Interfaces},
+  author = {Cao, Teng and Wan, Feng and Wong, Chi and {da Cruz}, Janir and Hu, Yong},
+  year = {2014},
+  volume = {13},
+  pages = {28},
+  issn = {1475-925X},
+  doi = {10/gb9jng},
+  journal = {BioMedical Engineering OnLine},
+  language = {en},
+  number = {1}
+}
+
+@article{Peng2019,
+  title = {Fatigue {{Evaluation Using Multi}}-{{Scale Entropy}} of {{EEG}} in {{SSVEP}}-{{Based BCI}}},
+  author = {Peng, Yufan and Wong, Chi Man and Wang, Ze and Wan, Feng and Vai, Mang I and Mak, Peng Un and Hu, Yong and Rosa, Agostinho C.},
+  year = {2019},
+  volume = {7},
+  pages = {108200--108210},
+  issn = {2169-3536},
+  doi = {10/ghsbzc},
+  journal = {IEEE Access},
+  language = {en}
+}
+
+@article{Craig2012,
+  title = {Regional Brain Wave Activity Changes Associated with Fatigue: {{Regional}} Brain Wave Activity and Fatigue},
+  shorttitle = {Regional Brain Wave Activity Changes Associated with Fatigue},
+  author = {Craig, Ashley and Tran, Yvonne and Wijesuriya, Nirupama and Nguyen, Hung},
+  year = {2012},
+  month = apr,
+  volume = {49},
+  pages = {574--582},
+  issn = {00485772},
+  doi = {10/ghvmcj},
+  journal = {Psychophysiology},
+  language = {en},
+  number = {4}
+}
+
+@article{Wang2017,
+  title = {An {{Online Brain}}-{{Computer Interface Based}} on {{SSVEPs Measured From Non}}-{{Hair}}-{{Bearing Areas}}.},
+  author = {Wang, Yu-Te and Nakanishi, Masaki and Wang, Yijun and Wei, Chun-Shu and Cheng, Chung-Kuan and Jung, Tzyy-Ping},
+  year = {2017},
+  volume = {25},
+  pages = {11--18},
+  issn = {1534-4320},
+  doi = {10/gdsm97},
+  journal = {IEEE transactions on neural systems and rehabilitation engineering : a publication of the IEEE Engineering in Medicine and Biology Society},
+  language = {en},
+  number = {1}
+}
+
+
+@article{Wang2018,
+  title = {A Novel Real-Time Driving Fatigue Detection System Based on Wireless Dry {{EEG}}},
+  author = {Wang, Hongtao and Dragomir, Andrei and Abbasi, Nida Itrat and Li, Junhua and Thakor, Nitish V. and Bezerianos, Anastasios},
+  year = {2018},
+  month = aug,
+  volume = {12},
+  pages = {365--376},
+  issn = {1871-4080, 1871-4099},
+  doi = {10/ghsbzd},
+  journal = {Cognitive Neurodynamics},
+  language = {en},
+  number = {4}
+}
+
