--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -1,3 +1,5 @@
 \chapter[Introdução]{Introdução}
 
-Na introdução deve-se fazer a contextualização da pesquisa,apresentando o tema, o problema a ser abordado, a(s) hipótese(s) ou pressupostos e a justificativa. O tema é uma delimitação do assunto da pesquisa, a qual pode ser relacionada à realidade do pesquisador tendo em vista sua intenção de conhecer melhor um assunto, investigá-lo ou realizar algo de maneira mais eficiente em relação ao mesmo. A justificativa reflete o “porquê” da realização da pesquisa, buscando identificar os motivos da preferência pelo tema escolhido e sua importância em comparação a outros temas. O conteúdo de uma justificativa deve ser constituído de dois aspectos: relevância (social,científica ou acadêmica) do tema e abrangência do assunto.
+A análise de fadiga, em si, pode ter diferentes finalidades. É possível que seja buscado quantificar de formar objetiva, como fim por si só, o cansaço de uma pessoa; ou então como meio de valorar o cansaço visual de um usuário de BCI ao visualizar constantemente os estímulos, o que pode contribuir para a melhoria desses dispositivos.
+
+Comumente a fadiga é avaliada através dos ritmos cerebrais fundamentais, compostos pelas bandas de frequência: 0.5-3.5 Hz ($\delta$), 4-7.5 Hz ($\theta$), 8-10 Hz ($\alpha_1$), 10.5-13 Hz ($alpha_2$) e 14-30 Hz ($\beta$) \cite{Craig2012}. Usualmente os valores assumidos
